--- a/frontend/static/css/mobileMenu.scss
+++ b/frontend/static/css/mobileMenu.scss
@@ -7,6 +7,9 @@
   src: local("Montserrat"), url(../fonts/Montserrat-Bold.ttf) format("truetype");
 }
 
+$backgroundColor: #131313;
+$textColor: #808080;
+
 .mobile-menu {
   width: 100%;
   height: 100%;
@@ -17,8 +20,8 @@
   font-family: "Montserrat-Regular";
   font-size: 8vw;
   font-weight: 700;
-  color: #131313;
-  text-shadow: -1px 0 #808080, 0 1px #808080, 1px 0 #808080, 0 -1px #808080;
+  color: $backgroundColor;
+  text-shadow: -1px 0 $textColor, 0 1px $textColor, 1px 0 $textColor, 0 -1px $textColor;
   list-style-type: none;
 }
 
