--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -15,13 +15,13 @@ html, body {
 
 .main-button {
   flex-basis: 60%;
-  width: 60%;
+  height: 60%;
+  margin: 10px;
   display: flex;
   justify-content: space-between;
 }
 
 .main-button__container {
-  flex-basis: 98%;
   width: 100%;
   color: #FFFFFF;
   transform: skew(-20deg);
@@ -39,19 +39,24 @@ html, body {
 }
 
 .main-button__button {
+  font-family: "Montserrat-Regular";
   color: #FFFFFF;
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid #C2AB81;
-  font-size: 0.9vw;
+  text-decoration: none;
+  margin-top: 5px;
+  font-size: 12px;
+  line-height: 18px;
   font-weight: 700;
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid rgba(0, 0, 0, 0);
+  text-wrap: nowrap;
   transform: skew(20deg);
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .phone-button {
-  flex-basis: 4vw;
-  width: 90%;
+  width: 95%;
+  margin: 10px;
+  height: 60%;
+  flex-basis: 18%;
   padding: 0.25vh;
   transform: skew(-20deg);
   background-color: #131313;
@@ -59,4 +64,12 @@ html, body {
   opacity: 40%;
 }
 
+@media (max-width: 450px) {
+  .phone-button, .main-button {
+    flex-basis: 90%;
+    width: 100%;
+    height: 55%;
+    margin-top: 15px;
+  }
+}
 /*# sourceMappingURL=index.css.map */
