--- a/frontend/static/css/header.css
+++ b/frontend/static/css/header.css
@@ -21,13 +21,13 @@
 
 .header__image {
   margin-left: 2vw;
-  height: 80px;
+  height: 100%;
   flex-basis: 8vw;
   width: 8vw;
 }
 
 .header__menu {
-  height: 80px;
+  height: 100%;
   color: white;
   margin-top: 15px;
   flex-grow: 0;
@@ -42,13 +42,12 @@
 }
 
 .header__buttons {
-  height: 80px;
-  margin-right: 2vw;
+  height: 100%;
   flex-basis: 28%;
   width: 28%;
   align-content: flex-end;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -56,9 +55,7 @@
   .mynav-icon {
     margin: 20px;
     display: block;
-    font-weight: 600;
-    font-size: larger;
-    float: left;
+    flex-basis: 4vw;
     width: 4vw;
   }
   li {
@@ -67,18 +64,20 @@
   .header__menu {
     display: none;
   }
+  .header__buttons {
+    flex-basis: 35%;
+    width: 35%;
+    margin-right: 10vh;
+  }
   .header__image {
+    flex-basis: 20%;
     width: 20%;
     float: right;
     margin-right: 4vw;
   }
   .header {
     width: 100%;
-    height: 80px;
-    position: relative;
-    left: 0;
-    top: 0;
-    right: 0;
+    align-items: center;
   }
 }
 @media (min-width: 1000px) {
