--- a/frontend/static/css/picture.scss
+++ b/frontend/static/css/picture.scss
@@ -6,12 +6,13 @@
   font-family: "Montserrat-Bold";
   src: local("Montserrat"), url(../fonts/Montserrat-Bold.ttf) format("truetype");
 }
+$color: #FFFFFF;
 
 .inform-picture {
   margin: 0;
   display: grid;
   place-content: center;
-  height: 65vh;
+  height: 75vh;
   background-image: url("./Background.png");
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
@@ -23,10 +24,10 @@
 .inform-picture__content {
   position: absolute;
   width: 38vw;
-  height: 38vh;
+  height: 55%;
   left: 4vw;
   bottom: 2vw;
-  color: #FFFFFF;
+  color: $color;
 } 
 
 .inform-picture__content__title {
@@ -39,4 +40,25 @@
   font-family: "Montserrat-Regular";
   font-size: 1vw;
   font-weight: 400;
+}
+
+.inform-picture__content__button {
+  width: 60%;
+  height: 30%;
+}
+
+@media (max-width: 1000px) {
+  .inform-picture__content {
+    width: 70vw;
+  }
+  .inform-picture__content__button {
+    width: 80%;
+    height: 25%;
+  }
+  .inform-picture__content__title {
+    font-size: 5vw;
+  }
+  .inform-picture__content__text {
+    font-size: 3vw;
+  }
 }
